(chore): add metadata, update styles,fix flickering theme

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-	color-scheme: light dark;
+	color-scheme: light;
 	--primary: #0f172a;
 	--secondary: #1e293b;
-	--accent: oklch(62.3% 0.214 259.815);
-	--accent-dark: oklch(74.6% 0.16 232.661);
+	/* --accent: oklch(62.3% 0.214 259.815); */
+	--accent: oklch(74.6% 0.16 232.661);
 	--text-primary: #f1f5f9;
 	--text-secondary: #cbd5e1;
 	--border: #334155;
@@ -20,31 +20,41 @@
 	:root {
 		--primary: #f8fafc;
 		--secondary: #f1f5f9;
+		--accent: oklch(52% 0.105 223.128);
+
 		--text-primary: #0f172a;
 		--text-secondary: #475569;
 		--border: #e2e8f0;
 		--text-heading: #030712;
-		--text-lead: #4a5565;
+		--text-lead: oklch(44.6% 0.03 256.802);
 		--text-base: #4a5565;
 		--outline: rgba(24, 24, 24, 0.111);
+		--marker: #a1a5ab;
 	}
 }
 
 [data-theme="light"] {
+	color-scheme: light;
 	--primary: #f8fafc;
 	--secondary: #f1f5f9;
+	--accent: oklch(52% 0.105 223.128);
+
 	--text-primary: #0f172a;
 	--text-secondary: #475569;
 	--border: oklch(70.7% 0.022 261.325);
 	--text-heading: #030712;
-	--text-lead: #4a5565;
+	--text-lead: oklch(44.6% 0.03 256.802);
 	--text-base: #4a5565;
 	--outline: rgba(24, 24, 24, 0.111);
+	--marker: #a1a5ab;
 }
 
 [data-theme="dark"] {
+	color-scheme: dark;
 	--primary: #030712;
-	--secondary: #1e293b;
+	--secondary: #131924;
+	--accent: oklch(74.6% 0.16 232.661);
+
 	--text-primary: #f1f5f9;
 	--text-secondary: #cbd5e1;
 	--border: #334155;
@@ -52,6 +62,7 @@
 	--text-lead: #d1d5dc;
 	--text-base: #99a1af;
 	--outline: rgba(255, 255, 255, 0.111);
+	--marker: #384357;
 }
 
 html {
@@ -164,7 +175,7 @@ svg {
 }
 
 .page-container {
-  padding: 20px;
+	padding: 20px;
 }
 
 /* Navigation */
@@ -181,7 +192,7 @@ header nav {
 	outline: 4px solid var(--outline);
 	z-index: 3;
 	max-width: fit-content;
-  box-shadow: dark(0px 0px 3px 0px oklch(87.2% 0.01 258.338));
+	box-shadow: dark(0px 0px 3px 0px oklch(87.2% 0.01 258.338));
 
 	& ul {
 		display: flex;
@@ -203,6 +214,10 @@ header nav {
 		text-decoration: none;
 		font-weight: 500;
 
+		&[aria-current="page"] {
+			color: var(--accent);
+		}
+
 		&:hover {
 			opacity: 0.85;
 		}
@@ -215,7 +230,7 @@ header nav {
 	position: relative;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-  margin-top: 1rem;
+	margin-top: 1rem;
 	gap: 0;
 	background: var(--secondary);
 	border-radius: 16px;
@@ -236,7 +251,7 @@ header nav {
 /* Sidebar */
 .profile-sidebar {
 	position: relative;
-	background: linear-gradient(180deg, var(--primary) 0%, var(--secondary) 100%);
+	background: var(--primary);
 	padding: 40px 5px;
 	display: flex;
 	flex-direction: column;
@@ -359,7 +374,7 @@ header nav {
 
 	&::-webkit-scrollbar-thumb {
 		background: var(--border);
-		border-radius: 3px;
+		/* border-radius: 3px; */
 	}
 
 	&::-webkit-scrollbar-thumb:hover {
@@ -389,10 +404,10 @@ header nav {
 	letter-spacing: 0.3px;
 
 	& p {
-		margin-top: 6px;
+		margin-top: 10px;
 	}
 
-	& b {
+	& strong {
 		color: var(--accent);
 	}
 }
@@ -422,15 +437,25 @@ header nav {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 12px 20px;
+	padding-left: 1rem;
 
 	& li {
-		padding: 10px 12px;
-		background: rgba(6, 182, 212, 0.05);
-		border-left: 3px solid var(--accent);
-		border-radius: 4px;
+		padding: 5px 6px;
 		color: var(--text-secondary);
-		font-size: 0.95rem;
+		font-size: 14px;
 		transition: var(--transition);
+		list-style: square;
+
+		/* &::before {
+      content: "⚘";
+      padding-right: 8px;
+      color: var(--marker);
+    } */
+
+		&::marker {
+      content: "✦";
+			color: var(--marker);
+		}
 
 		&:hover {
 			background: rgba(6, 182, 212, 0.1);
@@ -473,13 +498,14 @@ header nav {
 		margin-bottom: 16px;
 	}
 
-	b {
-		color: var(--text-heading);
+	strong {
+		color: var(--text-lead);
 		font-weight: 600;
 	}
 
 	& li::marker {
-		color: #2e384a;
+    content: "✦";
+		color: var(--marker);
 	}
 }
 
@@ -529,7 +555,7 @@ h3 {
 	text-transform: uppercase;
 	margin-bottom: 50px;
 	font-weight: 600;
-	color: #00bcff;
+	color: var(--accent);
 	font-style: italic;
 	text-align: right;
 	font-family: "Courier New", Courier, monospace;
@@ -547,7 +573,7 @@ h3 {
 
 	.profile-card {
 		grid-template-columns: 1fr;
-		margin-top: 1.5rem;
+		margin-top: 3.5rem;
 		outline-width: 6px;
 	}
 	.profile-sidebar {
@@ -574,15 +600,20 @@ h3 {
 		width: 120px;
 		height: 120px;
 	}
+
+	.page-title {
+		font-size: 2.5rem;
+	}
 }
 
 @media (max-width: 480px) {
 	body {
-		padding: 12px;
+		padding: 6px;
+	}
+	.page-container {
+		padding-inline: 0;
 	}
 	header nav {
-		/* left: -1rem;
-    right: -1rem; */
 		max-width: 100%;
 
 		& ul {
@@ -600,12 +631,14 @@ h3 {
 	}
 	.profile-card {
 		border-radius: 12px;
+		/* margin-inline: -20px; */
+		/* width: calc(100% + 40px); */
 	}
 	.profile-sidebar {
 		padding: 20px 16px;
 	}
 	.profile-content {
-		padding: 20px 16px;
+		padding: 20px 8px;
 	}
 	.profile-name {
 		font-size: 1.3rem;
@@ -613,10 +646,17 @@ h3 {
 	.profile-title {
 		font-size: 0.85rem;
 	}
-	.profile-bio {
-		font-size: 0.95rem;
-	}
 	.section-title {
 		font-size: 1.1rem;
+	}
+}
+
+@media (max-width: 390px) {
+	.profile-card {
+		border-radius: 0;
+		border-inline: 0;
+		/* outline: none; */
+		margin-inline: -10px;
+		width: calc(100% + 20px);
 	}
 }
